Fixed the sidebar to stretch

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
 html {
     font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 :root {
     --primary-bg-colour: #6d72c3
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 ul {
@@ -20,13 +29,16 @@ a {
     color: #fffdf7;
 }
 .container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+   display: flex;
 }
 
 .sidebar {
     background-color: var(--primary-bg-colour);
     color: #fffdf7;
+}
+
+.header {
+    font-size: xx-large;
 }
 .hero {
     display: grid;
